--- a/app/src/main/res/layout/layout_progress.xml
+++ b/app/src/main/res/layout/layout_progress.xml
@@ -1,37 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_progress"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minWidth="@dimen/margin_300"
-    android:visibility="visible"
-    app:cardBackgroundColor="@color/colorWhiteTranslucent"
-    app:cardCornerRadius="@dimen/margin_0"
-    app:cardElevation="@dimen/margin_5"
-    app:cardUseCompatPadding="false">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_2">
 
-    <LinearLayout
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txt_info_message"
+        style="@style/TextTitleStyle.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_2"
-        android:gravity="center">
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/txt_info_message"
-            style="@style/TextTitleStyle.Small"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/txt_loading"
-            android:visibility="visible" />
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+        android:gravity="center"
+        android:text="@string/txt_loading"
+        android:visibility="visible" />
+</LinearLayout>
